Добавлен ввод и вывод проблем и их подстраниц

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -38,3 +38,9 @@
 .outline:focus {
     outline: none;
 }
+
+/*================================= single-problem-wrapper ================================*/
+
+.single-problem-wrapper h1 {
+    text-align: center;
+}
