--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,3 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+html,
+body {
+  height: 100%;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
+  flex: 0 0 auto;
+}
+
 .navbar .avatar {
     border-radius: 50%;
     width: 50px;
@@ -43,4 +63,12 @@
 
 .single-problem-wrapper h1 {
     text-align: center;
+}
+
+footer {
+    background: #2c3e50;
+    color: #eee;
+    text-align: center;
+    padding: 30px 0;
+    margin-top: 50px;
 }
